# MultiSensorFusion-ROS-AM-Monitoring

./: .bashrc  .gitignore  README.md  fix_issues.md  requirements.txt
src/AutoDED/: CMakeLists.txt  package.xml  readme.md  socket_test.py
src/AutoDED/RAPID/: COMMON.sys
src/AutoDED/RAPID/Socket_routine/: Socket_routine.mod
src/AutoDED/launch/: auto_control.launch  auto_control_abb.launch  auto_control_kuka.launch  auto_control_kuka_LAAM.launch  auto_control_v2.launch
src/AutoDED/script/: main.py  main_test.py  main_v2.py  simple_socket.py
src/AutoDED/src/control_connection/: simple_socket.py  simple_socket_test.py
src/Infratec_thermal_camera/Infratec_image_processing/: CMakeLists.txt
src/Infratec_thermal_camera/Infratec_image_processing/launch/: in_situ_processing.launch  infratec_image_convert.launch  infratec_image_find_contours.launch  temperature_feature_extraction.launch
src/Infratec_thermal_camera/Infratec_image_processing/msg/: MsgHistogram.msg  MsgMeltpool.msg  MsgMeltpoolWidth.msg  MsgThreshold.msg  TemperatureFeature.msg
src/Infratec_thermal_camera/Infratec_image_processing/script/: ir_image_raw_calibrate.py  irb_image_binarize.py  irb_image_convert_distribution.py  irb_image_convert_mono.py  irb_image_convert_rgb.py  thermal_feature_extract.py
src/Infratec_thermal_camera/Infratec_ros_driver/: CMakeLists.txt  setup.py
src/Infratec_thermal_camera/Infratec_ros_driver/launch/: infratec_driver_image_convert.launch  infratec_vario_ros_driver_basic.launch  qt_infratec_insitu_monitoring.launch
src/Infratec_thermal_camera/Infratec_ros_driver/resources/: image_visualizer.ui  infratec.ui  infratec_insitu_viz.ui  robot_rviz.ui  status.ui
src/Infratec_thermal_camera/Infratec_ros_driver/script/: hirbgrab.py  infratec_insitu_monitoring.py  irbgrab.py  qt_image_visualize.py  qt_infratec.py  qt_rviz.py
src/RT_monitoring_application/Point_cloud_visualziation/PCLFIltering_Tool/: CMakeLists.txt  PCLFiltering_tool.cpp  cyliner_segmentation.cpp
src/RT_monitoring_application/Point_cloud_visualziation/PCL_visualization/: CMakeLists.txt
src/RT_monitoring_application/point_cloud_processing/: CMakeLists.txt  package.xml
src/RT_monitoring_application/point_cloud_processing/include/: LmdFuncs.h  pclviewer.h  ui_pclviewer.h
src/RT_monitoring_application/point_cloud_processing/launch/: pcl_processing.launch
src/RT_monitoring_application/point_cloud_processing/resources/: pclviewer.ui
src/RT_monitoring_application/point_cloud_processing/src/: LmdFuncs.cpp  Makefile  pcl_visualizer_demo.cpp  pclviewer.cpp  point_cloud_processing.pro  point_cloud_processing.pro.user.4.8-pre1  qt_pcl_processing.cpp  ui_pclviewer.h
src/RT_monitoring_application/point_cloud_scanning/fine_plane/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  find_plane  find_plane.cpp
src/RT_monitoring_application/scanning_robviz/: CMakeLists.txt  package.xml
src/RT_monitoring_application/scanning_robviz/PCL_segmentation/: CMakeLists.txt  PCL_segmentation.cpp
src/RT_monitoring_application/scanning_robviz/config/: workcell.rviz
src/RT_monitoring_application/scanning_robviz/data/: 1b.xyz  3a.xyz  7.xyz
src/RT_monitoring_application/scanning_robviz/distance/: 1584179413.598698distance.txt  1584179428.143358distance.txt  1584179438.254479distance.txt  1584179453.352037distance.txt  1584179464.650751distance.txt  1584179512.066813distance.txt  1584179608.447439distance.txt  1584179636.764979distance.txt  1584179647.730041distance.txt  1584179656.200963distance.txt  1584179876.105268distance.txt  1584179881.852052distance.txt  1584179897.622852distance.txt  1584179913.597236distance.txt  1584179922.802022distance.txt  1584179985.119672distance.txt  (+17 more)
src/acoustic_monitoring/acoustic_feature_extraction/: CMakeLists.txt  package.xml
src/acoustic_monitoring/acoustic_monitoring_msgs/: CMakeLists.txt  package.xml
src/camera_measures/: CMakeLists.txt
src/camera_measures/launch/: camera_measures.launch  coaxial_vision_measures.launch  velocity_measures_kuka.launch
src/camera_measures/msg/: MsgAcceleration.msg  MsgGeometry.msg  MsgTwist.msg
src/camera_measures/scripts/: nd_coolrate.py  nd_geometry.py  nd_moments.py  nd_registration.py  nd_supervisor.py  nd_velocity.py  nd_velocity_kuka.py  nd_velocity_kuka_v2.py  nd_velocity_supervisor.py  qt_display.py  qt_measures.py  qt_plot.py
src/camera_measures/src/: kuka_velocity_measures_node.cpp
src/coaxial_melt_pool_monitoring/: CMakeLists.txt  package.xml
src/coaxial_melt_pool_monitoring/launch/: coaxial_meltpool_monitoring.launch
src/coaxial_melt_pool_monitoring/msg/: MsgCoaxialMeltPoolFeatures.msg
src/coaxial_melt_pool_monitoring/script/: coaxial_meltpool_feature_extraction.py
src/coaxial_melt_pool_monitoring/src/: coaxial_meltpool_feature_extraction_node.cpp
src/defects_identification/: CMakeLists.txt  README.md  package.xml  setup.py
src/defects_identification/launch/: defects_prediction.launch  defects_prediction_test.launch
src/defects_identification/msg/: MsgDefects.msg  MsgPointHeight.msg
src/defects_identification/pointcloud_machine_learning/: Plane_defect_machine_learning.py  plotPoints.py  plot_points_only.py
src/defects_identification/script/: nd_defects_identification.py  nd_laser_robot_stop.py
src/defects_identification/src/: Plane_defect_machine_learning (copy).py  Plane_plot.ipynb
src/multimodal_monitoring_GUI/: CMakeLists.txt  package.xml
src/multimodal_monitoring_GUI/resources/: path_robviz.ui
src/multisense_gui/: CMakeLists.txt  package.xml
src/multisense_gui/launch/: qt_multisense_gui.launch
src/multisense_gui/resources/: audio_image_visualizer.ui  key_feature_visualizer.ui  multisense_gui.ui  virtual_quality_map.ui
src/multisense_gui/scripts/: multisense_gui.py  qt_image_audio_feature_visualize.py  qt_image_audio_visualize.py  qt_quality_visualize.py
src/scanning_application/monitoring_json/: CMakeLists.txt  package.xml
src/scanning_application/point_cloud_analysis/: CMakeLists.txt
src/scanning_application/scanning_robviz/: CMakeLists.txt  package.xml  setup.py
(+4116 files in other folders)
