<?xml version="1.0"?>
<!-- <package format="2"> -->
<package>
  <name>auto_control</name>
  <version>1.2.3</version>
  <description>
    the combined program for automatic DED process control and monitoring
  </description>
  <license>NA</license>
  <author>Chen Lequn</author>
  <author email="chen1189@e.ntu.edu.sg">Chen Lequn</author>
  <maintainer email="chen1189@e.ntu.edu.sg">Chen Lequn</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
 

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- <exec_depend>message_runtime</exec_depend> -->
</package>
