<?xml version="1.0"?>
<package>
  <name>point_cloud_processing</name>
  <version>0.1.0</version>
  <description>The point_cloud_processing package</description>
  <author email="chen1189@e.ntu.edu.sg">Chen lequn</author>
  <maintainer email="chen1189@e.ntu.edu.sg">Chen lequn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>pcl_msgs</run_depend>
  
</package>
