<?xml version="1.0"?>
<package>
  <name>monitoring_jason</name>
  <version>0.3.0</version>
  <description>The monitoring_jason package</description>
  <author email="chen1189@e.ntu.edu.sg">Chen lequn</author>
  <maintainer email="chen1189@e.ntu.edu.sg">Chen lequn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
